Cambios para agregar ROutes al módulo, no funciona - Jorge Arce.

--- a/Angular_test1/Angular_test1.csproj
+++ b/Angular_test1/Angular_test1.csproj
@@ -58,6 +58,7 @@
     <Content Include="Account\Register.aspx" />
     <Content Include="Controllers\FirstController.js" />
     <Content Include="Pages\FirstPage.htm" />
+    <Content Include="Partials\View2.html" />
     <Content Include="Styles\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
