Se implementó mediante el uso de un servicio "demoApp.factory(xxxx" la funcionalidad de agregar nuevos registros a un set de datos en un objecto JS, el cual pudo ser mantenido, mostrador y discretizado en una vista parcial.
Jorge Arce.

--- a/Angular_test1/Angular_test1.csproj
+++ b/Angular_test1/Angular_test1.csproj
@@ -60,6 +60,7 @@
     <Content Include="Pages\FirstPage.htm" />
     <Content Include="Partials\View1.html" />
     <Content Include="Partials\View2.html" />
+    <Content Include="Partials\View3.html" />
     <Content Include="Scripts\angular-route.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\route.js" />
